Fix meteor-status visibility

--- a/client/css/general.css
+++ b/client/css/general.css
@@ -1,8 +1,3 @@
-body {
-  /* transitions plugin changes the font */
-  font-family: "Roboto", sans-serif;
-}
-
 .student-detail-panel span {
   text-decoration: underline;
 }
@@ -27,3 +22,8 @@ body {
 .collection-item .icon-right-nav {
   vertical-align: super
 }
+
+.meteor-status {
+  z-index: 9999
+}
+
